# dso-api

./: .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  DATASET_VERSIONING.md  DEVELOPMENT.md  Dockerfile-dev-docs  DockerfileDevDocs  Jenkinsfile  README.md  docker-compose.debug.yml  docker-compose.test-openapi-spec.yml  docker-compose.yml  docs  pyproject.toml
src/: .coveragerc  .flake8  .prettierrc  Dockerfile  Makefile  flake.cfg  get_imds_db_token.sh  get_token.sh  initialize_db.sh  jwks_test.json  manage.py  pyproject.toml  pytest.ini  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  setup.cfg
src/.jenkins/: docker-migrate.sh
src/.jenkins/openapi_validator/: Dockerfile  docker-compose.yml  run_validator.sh
src/.jenkins/owasp/: docker-compose.yml  start_owasp.sh
src/.jenkins/owasp_test/: docker-compose.yml  test_owasp_api.py
src/.jenkins/owasp_vulnerability_scan/: docker-compose.yml  docker-wait.sh  owasp_scan.py  owasp_scan.sh
src/.jenkins/test/: docker-compose.yml  test.sh
src/.jenkins/test_owasp/: docker-wait.sh  test.sh  test_owasp_api.py
src/api_test/integrationTest/: datasetconstant.py  datasetconstantbussinv.py  datasetconstantinit.py  test_datasetbussinv.py  test_datasetngfz.py
src/devtools/: __init__.py
src/djangorestframework_dso/: serializers.py  utils.py
src/dso_api/: audit_log.py  dbroles.py  dbrouters.py  middleware.py  openapi.py  router.py  sentry.py  settings.py  trace_exporter.py  urls.py  wsgi.py
src/dso_api/batch/: batch.py  (+3 more)
src/e2e-tests/: test_closed_datasets.py  test_open_datasets.py
src/e2etest/: dataconstantstandvastgoed.py  datasetconstant.py  datasetconstantbussinv.py  datasetconstantgebiedenbuurten.py  datasetconstantgebiedenwijken.py  datasetconstantinit.py  test_datasetbussinv.py  test_datasetgebiedenbuurten.py  test_datasetgebiedenwijken.py  test_datasetngfz.py  test_datasetstandvastgoed.py
src/rest_framework_dso/: __init__.py  crs.py  embedding.py  exceptions.py  fields.py  filters.py  iterators.py  mixins.py  openapi.py  pagination.py  paginator.py  parsers.py  permissions.py  renderers.py  response.py  serializer_helpers.py  serializers.py  utils.py  views.py
src/tests/: conftest.py  settings.py  test_audit_log.py  test_database_schemas_router.py  test_health.py  test_middleware.py  test_openapi.py  test_sentry_filter.py  test_tags.py  test_user_context.py  utils.py
(+35090 files in other folders)
