[metadata]
name = dso-api
version = 0.1
description = DSO API
long_description = Dynamic API based on Amsterdam Schema according to DSO requirements
url = https://api.data.amsterdam.nl/v1
author = Amsterdam Datapunt
author_email = datapunt@amsterdam.nl
license = Mozilla Public License Version 2.0
classifiers =
    Environment :: Web Environment
Framework :: Django
    Framework :: Django :: X.Y  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
[options]
include_package_data = true
packages =
    dso_api.lib
    dso_api.dynamic_api
    rest_framework_dso
install_requires =
    django >= 3.0.4
    drf-amsterdam >= 0.3.2
    sqlparse >= 0.3.1
    django-environ >= 0.4.5
    django-postgres-unlimited-varchar >= 1.1.0
    django-gisserver >= 0.5
    djangorestframework >= 3.11.0
    djangorestframework-gis >= 0.15
    amsterdam-schema-tools >=0.0.4
    datapunt-authorization-django >= 1.0.0
    drf-amsterdam >= 0.3.2
    drf-spectacular >= 0.8.5
    jsonschema >= 3.2.0
    psycopg2-binary >= 2.8.4
    python-swiftclient >= 3.9.0
    python-keystoneclient >= 3.22.0
    readerwriterlock >= 1.0.6
    requests >= 2.23.0
    sentry-sdk >= 0.14.2
