[metadata]
name = dso-api
version = 0.1
description = DSO API
long_description = Dynamic API based on Amsterdam Schema according to DSO requirements
url = https://api.data.amsterdam.nl/v1
author = Amsterdam Datapunt
author_email = datapunt@amsterdam.nl
license = Mozilla Public License Version 2.0
classifiers =
    Environment :: Web Environment
Framework :: Django
    Framework :: Django :: X.Y  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
[options]
include_package_data = true
packages =
    dso_api.lib
    dso_api.dynamic_api
    rest_framework_dso
